<resources>
    <string name="app_name">IllusionApp</string>
    <string name="welcome">"Welcome to"</string>
    <string name="create_account">Create your account</string>
    <string name="username">Username</string>
    <string name="username_hint">type here</string>
    <string name="password">Password</string>
    <string name="password_hint">type your password here</string>
    <string name="sign_in">Sign In</string>
    <string name="register_with">Or Register with</string>
    <string name="login_with">Or Login with\n</string>
    <string name="goto_register">Dont have an account yet? Register here</string>
    <string name="sign_up">Create your account</string>
    <string name="email">Email</string>
    <string name="goto_login">Already have an account? login here</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="create_password">Create a password</string>
    <string name="create_password_hint">must be 8 characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">repeat password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="nav_home">Home</string>
    <string name="nav_gallery">AI-Gallery</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_gallery">AI-Gallery</string>
    <string name="bottom_scan">Scan</string>
    <string name="bottom_history">History</string>
    <string name="bottom_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image">Upload Image</string>
    <string name="complete_scan">Verification Completed</string>
    <string name="ai_detected">AI Detected: %s</string>
    <string name="accuracy">Confidence: %.2f%%</string>
    <string name="confirmation_fake">Our scan confirmed AI-generated content in this image</string>
    <string name="confirmation_real">Our scan confirmed this is not an AI-generated image</string>
    <string name="confirmation_default">We cannot decide yet</string>
    <string name="done">Done</string>
    <string name="photo_container">Photo Container</string>
    <string name="photo">Profile Picture</string>
    <string name="news">News</string>
    <string name="view_all">view all</string>
    <string name="recent_scan">Recent Scan</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="mode_icon">Mode Icon</string>
    <string name="mode">Mode</string>
    <string name="help_icon">Help Icon</string>
    <string name="help">Help</string>
    <string name="about_icon">About Icon</string>
    <string name="about">About</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Logout</string>
    <string name="history_image">History Image</string>
    <string name="news_image">Image News</string>
    <string name="aiGalleryTitle">AI Gallery</string>
    <string name="aiHistoryTitle">History</string>
    <string name="placeholder">Image Placeholder</string>
    <string name="scanning_image">Scanning image...</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="help_title">Help and Support</string>
    <string name="help_content">Welcome to the help section! Here, you can find answers to common questions about how to use the app. If you need further assistance, please contact our support team.</string>
    <string name="contact">+62122322333</string>

    <string name="about_title">About Us</string>
    <string name="about_content">Illusion is an advanced application designed to detect AI-generated deepfake content. By leveraging state-of-the-art algorithms and machine learning models, it analyzes images to identify signs of manipulation or synthetic generation. Illusion is designed for individuals, content creators, and organizations aiming to maintain authenticity and combat misinformation in the digital age. Our mission is to make cutting-edge technology accessible and easy to use for everyone and Keeping users away from the misuse of AI Deepfake.</string>

    <string name="help_logo">Help Logo</string>
    <string name="about_logo">About Logo</string>
    <string name="ai_not_detected">AI Not Detected</string>
    <string name="ai_unknown">We cant decide</string>
    <string name="ai_is_detected">AI Detected</string>
    <string name="delete_account">Delete Account</string>
</resources>