<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.illusionapp.view.main.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.illusionapp.view.main.fragments.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.illusionapp.view.main.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.illusionapp.view.main.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.example.illusionapp.view.main.fragments.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />
</navigation>
